--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -1,11 +1,5 @@
 .contacts {
-  margin-top: 95px;
-}
-.contacts__wrap {
-  min-height: 813px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  margin-top: 85px;
 }
 .contacts__title {
   font-size: 18px;
@@ -15,6 +9,7 @@
 }
 .contacts__adress,
 .contacts__email {
+  margin-top: 26px;
   font-size: 15px;
   font-weight: normal;
   line-height: 30px;
@@ -41,10 +36,19 @@
   }
 }
 .contacts__img {
+  height: auto;
   width: 100%;
+  min-width: 320px;
+  overflow: hidden;
   margin: 0 auto;
 }
+.contacts__img_wrap {
+  margin-top: 40px;
+}
 .contacts__write_us {
+  display: block;
+  position: relative;
+  top: 35px;
   margin: 0 9.375%;
   padding: 15px 50px;
   text-align: center;
