--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -1,6 +1,7 @@
 .page__footer {
+  position: relative;
+  top: 75px;
   background-color: #f1f1f1;
-  margin-top: 40px;
   min-height: 160px;
   box-sizing: border-box;
 }
