--- a/css/page__header.css
+++ b/css/page__header.css
@@ -112,6 +112,8 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin: 0; }
+  .header__logo_img {
+    margin-top: 25px; }
   .header__menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -126,7 +128,11 @@
     padding-left: 50px;
     border-bottom: 1px solid #ececec;
     height: 88px;
-    width: 44.66145833333333%; }
+    width: 48.30729166666667%; }
+  .header__link_inner {
+    margin-left: -2px; }
+  .header__link_span {
+    margin-left: 25px; }
   .header__site_menu {
     position: relative;
     top: -24px;
@@ -136,11 +142,11 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: 50px;
-    width: 39.84375%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    margin-left: 50px;
+    width: 49%;
     font-size: 15px; }
   .header__user_menu {
     -webkit-box-ordinal-group: 2;
@@ -152,7 +158,7 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-left: auto;
-    width: 55.33854166666667%; }
+    width: 51.69270833333333%; }
   .header__user_menu .header__link {
     border-left: 1px solid #ececec;
     height: 88px; }
@@ -181,18 +187,16 @@
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start; }
-  .header__link_span {
-    margin-left: 20px; }
   .header__bottom {
     display: none; }
   .header__delivery {
     display: block;
-    margin-top: 24px;
+    margin-top: 17px;
     font-size: 15px;
     line-height: 24px;
     font-weight: normal;
     margin-left: 84px;
-    padding-left: 9.25%;
+    padding-left: 8%;
     width: 100%;
     text-align: left; } }
 
@@ -204,12 +208,11 @@
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
-    width: 18.60869565217391%;
+    width: calc(100% - (100% - 249px));
     padding: 0;
     border-width: 0;
-    text-align: center;
     border-bottom: 1px solid #ececec;
-    position: relative; }
+    padding-left: 2%; }
   .header__site_menu {
     position: static;
     display: -webkit-box;
@@ -220,30 +223,41 @@
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0;
-    width: 40.69565217391304%;
-    margin: 0; }
-    .header__site_menu .header__item {
-      width: 50%; }
+    /* width: calc(50% - 182px + 42px); */
+    width: 44%;
+    margin: 0;
+    font-size: 17px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
     .header__site_menu .header__item_catalog {
+      width: 47%;
       border-right: 1px solid #ececec; }
+    .header__site_menu .header__item_order {
+      padding-left: 35px;
+      width: 53%; }
     .header__site_menu .header__link {
-      height: 88px; }
+      height: 88px;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start; }
   .header__user_menu {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
-    width: 40.69565217391304%; }
+    width: calc(100% - 44% - 249px); }
     .header__user_menu .header__link {
       border-bottom: 0; }
   .header__menu .header__bottom {
     display: block;
+    margin: 0;
     margin-top: 25px;
-    height: auto; }
+    height: auto;
+    width: 100%; }
   .header__menu .header__top {
     border-bottom: 1px solid #ececec;
     height: 88px; }
   .header__new {
-    margin-left: 25px; }
+    width: 61%; }
   .header__sale {
-    display: block;
-    margin-right: 45px; } }
+    width: 39%; } }
