--- a/sass/page__header.scss
+++ b/sass/page__header.scss
@@ -144,7 +144,9 @@
     flex-wrap: wrap;
     margin: 0;
   }
-
+  .header__logo_img {
+    margin-top: 25px;
+  }
   .header__menu {
     display: flex;
     position: static;
@@ -157,17 +159,22 @@
     padding-left: 50px;
     border-bottom: 1px solid #ececec;
     height: 88px;
-    width: 44.66145833333333%;
+    width: 48.30729166666667%;
   }
-
+  .header__link_inner {
+    margin-left: -2px;
+  }
+  .header__link_span {
+    margin-left: 25px;
+  }
   .header__site_menu {
     position: relative;
     top: -24px;
     order: 2;
     display: flex;
-    margin-left: 50px;
-    width: 39.84375%;
     justify-content: space-between;
+    margin-left: 50px;
+    width: 49%;
     font-size: 15px;
   }
 
@@ -176,7 +183,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
-    width: 55.33854166666667%;
+    width: 51.69270833333333%;
   }
 
   .header__user_menu .header__link {
@@ -213,9 +220,7 @@
     justify-content: flex-start;
   }
 
-  .header__link_span {
-    margin-left: 20px;
-  }
+
 
   .header__bottom {
     display: none;
@@ -223,12 +228,12 @@
 
   .header__delivery {
     display: block;
-    margin-top: 24px;
+    margin-top: 17px;
     font-size: 15px;
     line-height: 24px;
     font-weight: normal;
     margin-left: 84px;
-    padding-left: 9.25%;
+    padding-left: 8%;
     width: 100%;
     text-align: left;
   }
@@ -242,12 +247,11 @@
   .header__logo_link {
     display: block;
     order: 1;
-    width: 18.60869565217391%;
+    width: calc(100% - (100% - 249px));
     padding: 0;
     border-width: 0;
-    text-align: center;
     border-bottom: 1px solid #ececec;
-    position: relative;
+    padding-left: 2%;
   }
 
   .header__site_menu {
@@ -255,25 +259,32 @@
     display: flex;
     flex-wrap: wrap;
     order: 0;
-    width: 40.69565217391304%;
+    /* width: calc(50% - 182px + 42px); */
+    width: 44%;
     margin: 0;
+    font-size: 17px;
+    justify-content: flex-start;
 
     .header__item {
-      width: 50%;
     }
 
     .header__item_catalog {
+      width: 47%;
       border-right: 1px solid #ececec;
     }
-
+    .header__item_order {
+      padding-left: 35px;
+      width: 53%;
+    }
     .header__link {
       height: 88px;
+      justify-content: flex-start;
     }
   }
 
   .header__user_menu {
     order: 2;
-    width: 40.69565217391304%;
+    width: calc(100% - 44% - 249px);
 
     .header__link {
       border-bottom: 0;
@@ -283,8 +294,10 @@
   .header__menu {
     .header__bottom {
       display: block;
+      margin: 0;
       margin-top: 25px;
       height: auto;
+      width: 100%;
     }
     .header__top {
       border-bottom: 1px solid #ececec;
@@ -293,11 +306,10 @@
   }
 
   .header__new {
-    margin-left: 25px;
+    width: 61%;
   }
 
   .header__sale {
-    display: block;
-    margin-right: 45px;
+    width: 39%;
   }
 }
