--- a/css/page__header.css
+++ b/css/page__header.css
@@ -212,7 +212,7 @@
     padding: 0;
     border-width: 0;
     border-bottom: 1px solid #ececec;
-    padding-left: 2%; }
+    padding-left: 4%; }
   .header__site_menu {
     position: static;
     display: -webkit-box;
@@ -223,7 +223,6 @@
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0;
-    /* width: calc(50% - 182px + 42px); */
     width: 44%;
     margin: 0;
     font-size: 17px;
@@ -232,7 +231,8 @@
             justify-content: flex-start; }
     .header__site_menu .header__item_catalog {
       width: 47%;
-      border-right: 1px solid #ececec; }
+      border-right: 1px solid #ececec;
+      padding-left: 50px; }
     .header__site_menu .header__item_order {
       padding-left: 35px;
       width: 53%; }
@@ -248,16 +248,25 @@
     width: calc(100% - 44% - 249px); }
     .header__user_menu .header__link {
       border-bottom: 0; }
+  .header__link_inner {
+    margin-left: 4px; }
+  .header__link_span {
+    display: inline-block;
+    vertical-align: baseline;
+    margin-bottom: 3px; }
   .header__menu .header__bottom {
     display: block;
     margin: 0;
-    margin-top: 25px;
+    margin-top: 18px;
     height: auto;
-    width: 100%; }
+    width: 100%;
+    font-size: 15px; }
   .header__menu .header__top {
     border-bottom: 1px solid #ececec;
     height: 88px; }
   .header__new {
-    width: 61%; }
+    width: 47%;
+    padding-left: 50px; }
   .header__sale {
-    width: 39%; } }
+    width: 53%;
+    padding-left: 34px; } }
