--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,14 +1,13 @@
 
 .home {
   font-weight: bold;
+  background-color: #f9f9f9;
 }
 .home__wrap {
   width: 100%;
   min-height: 488px;
-  background-image: url('../img/hero-mobile@1x.jpg');
-  background-position: 50% -15px;
   background-size: 182%;
-  background-repeat: no-repeat;
+  background: url('../img/hero-mobile@1x.jpg') no-repeat 46.5% -17px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -16,6 +15,7 @@
 .main__title {
   position: relative;
   top: 70px;
+  left: 7px;
   font-size: 27px;
   line-height: 30px;
   width: 300px;
@@ -23,17 +23,10 @@
   text-align: center;
 }
 .home__item {
-  padding: 0 9.375%;
   height: 103px;
-  min-height: 98px;
-  max-height: 108px;
 
   &:hover .home__img {
     opacity: 0.7;
-  }
-
-  &:hover .home__link {
-    transform: translateY(-5px);
   }
   &:hover {
     height: 108px;
@@ -50,35 +43,179 @@
 
 .home__interior {
   background-color: #63d1bb;
-  &:hover {
-    background-color: #59d5bc;
-  }
 
-}
-.home__toy {
-  background-color: #56c3b2;
   &:hover {
     background-color: #46c1ae;
   }
+}
+
+.home__toy {
+  background-color: #56c3b2;
+
+  .home__img {
+    position: relative;
+    left: -4%;
+    opacity: 0.3;
+  }
+
 }
 .home__link {
   text-decoration: none;
   display: flex;
   align-items: center;
   height: 103px;
-  display: flex;
   justify-content: space-between;
-
-  /* &:hover {
-    height: 108px;
-  } */
+  width: 100%;
 }
+
 .home__text {
+  position: relative;
+  left: 9%;
+  top: -3px;
   font-size: 19px;
   line-height: 24px;
   color: #ffffff;
   width: 150px;
 }
 .home__img {
+  position: relative;
+  left: -6%;
   opacity: 0.3;
+}
+
+@media screen and (min-width: 768px) {
+  .page__main {
+    position: relative;
+    top: -65px;
+  }
+  .home {
+    position: relative;
+
+  }
+  .home__wrap {
+    min-height: 755px;
+    background-size: 160%;
+    background-position: 50% 0;
+    width: 668px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .main__title {
+    font-size: 43px;
+    line-height: 50px;
+    width: auto;
+    margin-top: 18px;
+    position: relative;
+    left: 5px;
+    top: 135px;
+  }
+  .home__inner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 130px;
+    min-width: 668px;
+    width: calc(100% - 100px);
+    align-self: center;
+    position: relative;
+    left: 10px;
+    z-index: 1;
+  }
+  .home__item {
+    width: 50%;
+    padding: 0;
+    height: 130px;
+    transition: 0.2s;
+    &:hover {
+      transform: translateY(-5px);
+      height: 130px;
+      border-radius: 5.5%;
+      /*box-shadow: 0 15px 20px -10px #75625b;
+      z-index: 1;*/
+    }
+  }
+  .home__link {
+    height: 100%;
+    padding: 0 0 10px 10.77844311377246%;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: initial;
+    padding: 0 11.97604790419162%;
+
+    &:hover .home__text {
+      transform: translateY(-5px);
+    }
+    &:hover .home__img {
+      transform: translateY(-5px);
+    }
+  }
+  .home__text {
+    position: relative;
+    top: -5px;
+    font-size: 20px;
+    line-height: 30px;
+    transition: 0.7s;
+  }
+  .home__img {
+    margin-left: 31%;
+    transition: 0.7s;
+  }
+  .home__separator {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 25px;
+    background-image: url('../img/wave.png');
+    background-size: 40px 24px;
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    z-index: 999;
+  }
+}
+
+@media screen and (min-width: 1250px) {
+  .page__main {
+    position: relative;
+    top: -42px;
+  }
+  .home__wrap {
+    min-height: 755px;
+    width: 1050px;
+    margin: 0 auto;
+    background-size: 100%;
+    background-position: 50% -15px;
+    /* background-image: url('../img/wave.png');
+    background-size: 25px 10px;
+    background-position: bottom left;
+    background-repeat: repeat-x; */
+  }
+  .main__title {
+    font-size: 53px;
+    line-height: 57px;
+    width: auto;
+    position: relative;
+    left: 10px;
+    top: 138px;
+  }
+  .home__inner {
+    width: 1050px;
+    min-width: 1050px;
+  }
+  .home__item {
+    width: 50%;
+    padding: 0;
+    height: 130px;
+  }
+  .home__link {
+    height: 130px;
+    padding: 0 36px 10px 36px;
+    justify-content: space-between;
+  }
+  .home__text {
+    position: relative;
+    top: -5px;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
