--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -2,8 +2,6 @@
   position: relative;
   top: 75px;
   background-color: #f1f1f1;
-  min-height: 160px;
-  box-sizing: border-box;
 }
 .page__footer_wrap {
   min-height: 160px;
@@ -72,6 +70,52 @@
   height: 34px;
   fill: #63d1bb;
 }
-
-
-
+.footer__logo_wrap {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .footer__wrap {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    width: 668px;
+    margin: 0 auto;
+    min-height: auto;
+    height: 143px;
+  }
+  .footer__logo_wrap {
+    display: initial;
+    margin: 0;
+  }
+  .footer__social {
+    margin: 0;
+    width: 142px;
+    margin-left: 183px;
+    margin-right: auto;
+  }
+  .footer__html {
+    padding: 0;
+    font-size: 19px;
+    font-weight: bold;
+    line-height: 80px;
+    border-top: 0;
+    display: flex;
+    margin: 0;
+    width: auto;
+  }
+  .footer__html_icon {
+    margin-left: 20px;
+    width: 40px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1250px) {
+  .footer__wrap {
+    width: 1050px;
+    padding-bottom: 20px;
+  }
+  .footer__social {
+    margin-left: 374px;
+  }
+}
