--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,5 +1,10 @@
+.about_us {
+  width: 100%; }
+
 .about_us__wrap {
-  padding: 0 9.375%; }
+  width: 260px;
+  margin: 0 auto;
+  position: relative; }
 
 .about_us__title {
   font-size: 25px;
@@ -42,3 +47,81 @@
     background-image: url("../img/icon-feature-gift.svg");
     background-size: 33px 32px;
     background-position: 1% 5%; }
+
+@media screen and (min-width: 768px) {
+  .about_us {
+    margin-top: -27px; }
+  .about_us__wrap {
+    width: 668px;
+    margin: 0 auto;
+    padding: 0; }
+  .about_us__title {
+    font-size: 43px;
+    line-height: 50px; }
+  .about_us__list {
+    margin-top: 22px;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 668px; }
+  .about_us__item {
+    min-height: 95px;
+    font-size: 20px;
+    line-height: 22px;
+    background-position: top left;
+    background-repeat: no-repeat;
+    padding-top: 55px;
+    margin-top: 28px;
+    width: 324px;
+    margin-left: 10px; }
+    .about_us__item_eco {
+      -webkit-box-ordinal-group: 2;
+          -ms-flex-order: 1;
+              order: 1; }
+    .about_us__item_price {
+      margin-top: 56px;
+      -webkit-box-ordinal-group: 4;
+          -ms-flex-order: 3;
+              order: 3; }
+    .about_us__item_like {
+      margin-top: 56px;
+      background-position: 2% 10%;
+      -webkit-box-ordinal-group: 6;
+          -ms-flex-order: 5;
+              order: 5; }
+    .about_us__item_hand {
+      -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+              order: 2; }
+    .about_us__item_support {
+      margin-top: 56px;
+      background-position: 0 5%;
+      -webkit-box-ordinal-group: 5;
+          -ms-flex-order: 4;
+              order: 4; }
+    .about_us__item_bag {
+      margin-top: 56px;
+      -webkit-box-ordinal-group: 7;
+          -ms-flex-order: 6;
+              order: 6; } }
+
+@media screen and (min-width: 1250px) {
+  .about_us {
+    margin-top: 205px; }
+  .about_us__wrap {
+    width: 668px;
+    margin: 0 auto;
+    padding: 0; }
+  .about_us__title {
+    font-size: 53px;
+    line-height: 57px; }
+  .about_us__list {
+    margin-top: 17px;
+    width: 700px;
+    margin-left: -7px; }
+  .about_us__item {
+    width: 350px;
+    margin-left: 0; } }
