--- a/css/modal.css
+++ b/css/modal.css
@@ -1,13 +1,18 @@
 .modal {
+  position: fixed;
+  top: 500px;
+  left: 0;
+  width: 320px;
+  background-color: #ffffff;
   border-top: 1px solid #c7c7c7;
   -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.25);
           box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.25);
   display: none; }
 
 .modal__wrap {
-  padding: 0 30px;
   min-height: 336px;
-  width: 100%;
+  width: 260px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,30 +20,28 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
 .modal__title {
-  margin-top: 25px;
   width: 160px;
   font-size: 25px;
   font-weight: bold;
   line-height: 30px;
   text-transform: uppercase;
-  align-text: center;
-  margin-top: 30px; }
+  margin-top: 31px;
+  margin-left: 60px; }
 
 .modal__text {
   font-size: 15px;
   font-weight: normal;
   line-height: 30px;
-  color: #444444; }
+  color: #444444;
+  margin-left: 63px;
+  margin-top: 10px; }
 
 .modal__form {
-  margin-top: 30px;
+  margin-top: 42px;
   min-height: 135px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,14 +73,15 @@
   line-height: 16px;
   color: #444444;
   border: 2px solid #ececec;
-  padding: 15px 32px; }
+  padding: 13px 34px; }
   .modal__label:hover {
     border-color: #c7c7c7; }
   .modal__label:active {
     border-color: #62d1ba; }
 
 .modal__button {
-  margin-top: 30px;
+  position: relative;
+  top: -18px;
   padding: 15px 80px;
   border: 0;
   background-color: #63d1bb;
