--- a/css/preview.css
+++ b/css/preview.css
@@ -1,5 +1,4 @@
 .preview__wrap {
-  margin-top: 35px;
   height: 820px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,12 +10,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 9.375%; }
+  width: 90.625%;
+  margin: 0 auto;
+  margin-top: 35px; }
 
 .preview__title {
   position: relative;
   top: -8px;
-  left: -5px;
   font-size: 25px;
   line-height: 30px;
   font-weight: bold; }
@@ -64,11 +64,22 @@
           flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.preview__coast {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
           justify-content: space-between;
-  min-height: 440px; }
+  margin-top: 27px; }
 
 .preview__price {
-  margin-top: 4px;
   -ms-flex-item-align: center;
       align-self: center;
   font-size: 17px;
@@ -76,6 +87,188 @@
   font-weight: bold; }
 
 .preview__order {
-  position: relative;
-  top: 4px;
+  display: block;
+  margin-top: 24px;
   padding: 15px 80px; }
+
+@media screen and (min-width: 768px) {
+  .preview {
+    margin-top: 30px;
+    /* background-image: radial-gradient(15px 20px at 20px 20px,#000 0, #000 15px, transparent 10px);
+    background-size: 40px 10px;
+    background-position: -40px left;
+    background-repeat: no-repeat; */ }
+  .preview__wrap {
+    padding: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 668px;
+    height: auto;
+    margin: 0 auto; }
+  .preview__title {
+    top: 0;
+    left: -5px;
+    font-size: 43px;
+    line-height: 50px;
+    width: 100%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+  .week::after {
+    display: inline-block;
+    margin-left: 142px;
+    width: 80px;
+    text-align: center;
+    position: absolute;
+    top: 6px;
+    line-height: 17px; }
+  .preview__specs {
+    margin-top: 50px;
+    width: 334px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    min-height: 243px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding-right: 43px; }
+  .preview__text {
+    font-size: 17px;
+    line-height: 30px;
+    width: 291px;
+    margin-bottom: auto; }
+  .preview__spec {
+    width: 291px;
+    margin: 0 auto;
+    height: 37px; }
+  .preview__spec_description {
+    margin-left: 25px; }
+  .preview__cart {
+    margin-top: 55px;
+    width: 334px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    height: auto;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3; }
+  .preview__coast {
+    position: relative;
+    top: -145px;
+    width: 334px;
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    min-height: 110px; }
+  .preview__price {
+    font-size: 20px;
+    line-height: 24px;
+    position: relative;
+    left: -25px;
+    top: 3px; }
+  .preview__order {
+    width: 290px;
+    margin: 0 auto;
+    position: relative;
+    left: -25px; }
+  .preview__img {
+    height: auto;
+    width: auto; } }
+
+@media screen and (min-width: 1250px) {
+  .preview {
+    width: 100%; }
+  .preview__wrap {
+    width: 1050px;
+    padding: 0;
+    margin: 0 auto; }
+  .preview__title {
+    top: 80px;
+    margin-left: 180px;
+    font-size: 53px;
+    line-height: 57px; }
+  .week::after {
+    display: inline-block;
+    width: 80px;
+    text-align: center;
+    position: absolute;
+    top: 6px;
+    left: -270px;
+    line-height: 17px; }
+  .preview__specs {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    width: 525px;
+    padding: 0;
+    padding-left: 185px;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .preview__text {
+    margin-top: 77px;
+    font-size: 17px;
+    line-height: 30px;
+    margin-bottom: 48px; }
+  .preview__spec {
+    margin: 0;
+    margin-top: 5px; }
+  .preview__cart {
+    position: relative;
+    margin: 0;
+    width: 525px;
+    top: -33px;
+    left: 7px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    height: auto;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    z-index: -1; }
+  .preview__coast {
+    position: relative;
+    top: 44px;
+    left: 90px;
+    width: 525px;
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    min-height: 117px; }
+  .preview__price {
+    font-size: 20px;
+    line-height: 24px;
+    position: relative;
+    left: -25px;
+    top: 3px; }
+  .preview__order {
+    width: 294px;
+    margin: 0 auto;
+    position: relative;
+    left: -23px; } }
