--- a/sass/about_us.scss
+++ b/sass/about_us.scss
@@ -1,5 +1,11 @@
+.about_us {
+  width: 100%;
+}
 .about_us__wrap {
-  padding: 0 9.375%;
+  width: 260px;
+  margin: 0 auto;
+  position: relative;
+
 }
 .about_us__title {
   font-size: 25px;
@@ -49,5 +55,86 @@
     background-image: url("../img/icon-feature-gift.svg");
     background-size: 33px 32px;
     background-position: 1% 5%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about_us {
+    margin-top: -27px;
+  }
+  .about_us__wrap {
+    width: 668px;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .about_us__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+  .about_us__list {
+    margin-top: 22px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 668px;
+  }
+  .about_us__item {
+    min-height: 95px;
+    font-size: 20px;
+    line-height: 22px;
+    background-position: top left;
+    background-repeat: no-repeat;
+    padding-top: 55px;
+    margin-top: 28px;
+    width: 324px;
+    margin-left: 10px;
+
+    &_eco {
+      order: 1;
+    }
+    &_price {
+      margin-top: 56px;
+      order: 3;
+    }
+    &_like {
+      margin-top: 56px;
+      background-position: 2% 10%;
+      order: 5;
+    }
+    &_hand {
+      order: 2;
+    }
+    &_support {
+      margin-top: 56px;
+      background-position: 0 5%;
+      order: 4;
+    }
+    &_bag {
+      margin-top: 56px;
+      order: 6;
+    }
+  }
+}
+@media screen and (min-width: 1250px) {
+  .about_us {
+    margin-top: 205px;
+  }
+  .about_us__wrap {
+    width: 668px;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .about_us__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+  .about_us__list {
+    margin-top: 17px;
+    width: 700px;
+    margin-left: -7px;
+  }
+  .about_us__item {
+    width: 350px;
+    margin-left: 0;
   }
 }
