--- a/sass/page__header.scss
+++ b/sass/page__header.scss
@@ -10,10 +10,13 @@
 }
 
 .header__logo_link {
+  position: relative;
   display: inline-block;
   vertical-align: baseline;
   margin-top: 4px;
-  margin-left: calc(50% - 43px);
+  margin-left: 50%;
+  left: -35px;
+  margin-right: auto;
 }
 
 .header__logo_img {
@@ -30,6 +33,7 @@
   width: 100%;
   background-color: #ffffff;
   position: relative;
+  display: flex;
 }
 
 .header__menu {
@@ -64,6 +68,9 @@
 
     .menu_close {
       display: inline-block;
+      position: relative;
+      top: 4px;
+      left: 2px;
     }
   }
 
@@ -72,14 +79,25 @@
 
   }
 }
+.header__input:checked + .header__label {
 
+  .menu_open {
+    display: none;
+  }
+
+  .menu_close {
+    display: inline-block;
+    position: relative;
+    top: 4px;
+    left: 2px;
+  }
+}
 .header__label {
-  margin-left: 19.6875%;
-  position: relative;
-  top: -11px;
+  margin-right: 5.375%;
+  margin-top: 10px;
   width: 20px;
   height: 30px;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .main_nav {
@@ -95,7 +113,9 @@
 }
 
 .header__link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 78px;
   border-bottom: 1px solid #ececec;
   text-decoration: none;
@@ -118,7 +138,23 @@
     fill: #77d7c4;
   }
 }
+.header__link_search {
+  align-self: flex-start;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 31px;
+  padding-right: 92px;
+}
+.header__link_inner {
+  margin-left: -15px;
 
+  svg {
+    margin-top: 10px;
+  }
+}
+.header__link_span {
+  margin-left: 20px;
+}
 .header__delivery {
   display: none;
 }
@@ -143,6 +179,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0;
+    background-color: transparent;
   }
   .header__logo_img {
     margin-top: 25px;
@@ -159,7 +196,7 @@
     padding-left: 50px;
     border-bottom: 1px solid #ececec;
     height: 88px;
-    width: 48.30729166666667%;
+    width: 49%;
   }
   .header__link_inner {
     margin-left: -2px;
@@ -176,6 +213,7 @@
     margin-left: 50px;
     width: 49%;
     font-size: 15px;
+    background-color: transparent;
   }
 
   .header__user_menu {
@@ -183,7 +221,8 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
-    width: 51.69270833333333%;
+    width: 51%;
+    background-color: transparent;
   }
 
   .header__user_menu .header__link {
@@ -224,6 +263,7 @@
 
   .header__bottom {
     display: none;
+
   }
 
   .header__delivery {
@@ -318,5 +358,9 @@
   .header__sale {
     width: 53%;
     padding-left: 34px;
+  }
+  .header__delivery {
+    position: relative;
+    left: 5px;
   }
 }
