--- a/sass/best_week.scss
+++ b/sass/best_week.scss
@@ -1,7 +1,7 @@
 .week::after {
   margin-top: 6px;
   display: block;
-  content: 'ТОВАР НЕДЕЛИ';
+  content: "ТОВАР НЕДЕЛИ";
   font-size: 17px;
   font-weight: bold;
   line-height: 20px;
