--- a/sass/btn.scss
+++ b/sass/btn.scss
@@ -1,5 +1,5 @@
 .btn {
-  font-family: 'Open_sans', 'Arial', 'sans-serif';
+  font-family: "Open_sans", "Arial", sans-serif;
   font-size: 17px;
   line-height: 20px;
   font-weight: bold;
