--- a/sass/industry.scss
+++ b/sass/industry.scss
@@ -2,15 +2,17 @@
   margin-top: 30px;
   padding: 0 30px;
 }
+
 .industry__title {
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
   padding: 30px 90px;
-  background-image: url('../img/icon-video.svg');
+  background-image: url("../img/icon-video.svg");
   background-position: 34px;
   background-repeat: no-repeat;
 }
+
 .industry__text {
   font-weight: normal;
   font-size: 13px;
@@ -18,37 +20,42 @@
   padding: 0 30px;
   margin-top: 30px;
 }
+
 .industry__wrap {
   position: relative;
 }
+
 .industry__inner {
   position: relative;
   width: 260px;
 
-  &:hover .industry__icon{
+  &:hover .industry__icon {
     transform: scale(1.2);
   }
-  &:active .industry__icon{
+
+  &:active .industry__icon {
     transform: scale(0.8);
   }
 }
+
 .industry__img {
   width: 100%;
   margin: 0 auto;
 }
+
 .industry__icon {
   position: absolute;
   top: 50%;
   left: 50%;
   margin-top: -39px;
-  margin-left: -51px/* 19,61538461538462% */;
+  margin-left: -51px;
   transition: transform 0.3s;
 }
+
 .industry__link {
   margin: 0 30px;
   margin-top: 30px;
   padding: 15px 24px;
   box-sizing: border-box;
   display: block;
-
 }
