--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -3,6 +3,7 @@
   top: 75px;
   background-color: #f1f1f1;
 }
+
 .page__footer_wrap {
   min-height: 160px;
   padding: 0 30px;
@@ -10,6 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
 .footer__social {
   margin: 0 auto;
   width: 165px;
@@ -18,29 +20,35 @@
   align-items: center;
   height: 80px;
 }
+
 .footer__social_icon {
   fill: #221f1f;
 
   &:hover {
     fill: #46c1ae;
   }
+
   &:active {
     fill: #46c1ae;
     fill-opacity: 0.3;
   }
 }
+
 .footer__social_instagram {
   width: 22px;
   height: 21px;
 }
+
 .footer__social_fb {
   width: 15px;
   height: 29px;
 }
+
 .footer__social_twitter {
   width: 24px;
   height: 20px;
 }
+
 .footer__html {
   font-size: 19px;
   font-weight: bold;
@@ -57,22 +65,25 @@
     color: rgba(#000000, 0.3);
   }
 
-  &:hover  .footer__html_icon {
+  &:hover .footer__html_icon {
     fill: #46c1ae;
   }
-  &:active  .footer__html_icon {
+
+  &:active .footer__html_icon {
     fill-opacity: 0.3;
   }
-
 }
+
 .footer__html_icon {
   width: 27px;
   height: 34px;
   fill: #63d1bb;
 }
+
 .footer__logo_wrap {
   display: none;
 }
+
 @media screen and (min-width: 768px) {
   .footer__wrap {
     display: flex;
@@ -81,19 +92,22 @@
     padding: 0;
     width: 668px;
     margin: 0 auto;
-    min-height: auto;
+    min-height: initial;
     height: 143px;
   }
+
   .footer__logo_wrap {
     display: initial;
     margin: 0;
   }
+
   .footer__social {
     margin: 0;
     width: 142px;
     margin-left: 183px;
     margin-right: auto;
   }
+
   .footer__html {
     padding: 0;
     font-size: 19px;
@@ -104,17 +118,20 @@
     margin: 0;
     width: auto;
   }
+
   .footer__html_icon {
     margin-left: 20px;
     width: 40px;
     height: 40px;
   }
 }
+
 @media screen and (min-width: 1250px) {
   .footer__wrap {
     width: 1050px;
     padding-bottom: 20px;
   }
+
   .footer__social {
     margin-left: 374px;
   }
