--- a/sass/page__header.scss
+++ b/sass/page__header.scss
@@ -30,10 +30,13 @@
 }
 
 .main_nav {
-  width: 100%;
   background-color: #ffffff;
   position: relative;
   display: flex;
+  margin-right: 5.375%;
+  margin-top: 10px;
+  width: 20px;
+  height: 30px;
 }
 
 .header__menu {
@@ -76,35 +79,15 @@
 
   &:checked + .header__label ~ .header__menu {
     display: block;
-
   }
 }
-.header__input:checked + .header__label {
 
-  .menu_open {
-    display: none;
-  }
-
-  .menu_close {
-    display: inline-block;
-    position: relative;
-    top: 4px;
-    left: 2px;
-  }
-}
 .header__label {
   margin-right: 5.375%;
   margin-top: 10px;
   width: 20px;
   height: 30px;
   background-color: #ffffff;
-}
-
-.main_nav {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 24px;
-  z-index: 10;
 }
 
 .header__site_menu,
@@ -120,6 +103,7 @@
   border-bottom: 1px solid #ececec;
   text-decoration: none;
   color: #000000;
+
   &:hover {
     color: rgba(0, 0, 0, 0.6);
   }
@@ -138,6 +122,7 @@
     fill: #77d7c4;
   }
 }
+
 .header__link_search {
   align-self: flex-start;
   display: flex;
@@ -145,6 +130,7 @@
   padding-left: 31px;
   padding-right: 92px;
 }
+
 .header__link_inner {
   margin-left: -15px;
 
@@ -152,9 +138,11 @@
     margin-top: 10px;
   }
 }
+
 .header__link_span {
   margin-left: 20px;
 }
+
 .header__delivery {
   display: none;
 }
@@ -181,9 +169,11 @@
     margin: 0;
     background-color: transparent;
   }
+
   .header__logo_img {
     margin-top: 25px;
   }
+
   .header__menu {
     display: flex;
     position: static;
@@ -198,12 +188,15 @@
     height: 88px;
     width: 49%;
   }
+
   .header__link_inner {
     margin-left: -2px;
   }
+
   .header__link_span {
     margin-left: 25px;
   }
+
   .header__site_menu {
     position: relative;
     top: -24px;
@@ -259,11 +252,8 @@
     justify-content: flex-start;
   }
 
-
-
   .header__bottom {
     display: none;
-
   }
 
   .header__delivery {
@@ -309,10 +299,12 @@
       border-right: 1px solid #ececec;
       padding-left: 50px;
     }
+
     .header__item_order {
       padding-left: 35px;
       width: 53%;
     }
+
     .header__link {
       height: 88px;
       justify-content: flex-start;
@@ -327,14 +319,17 @@
       border-bottom: 0;
     }
   }
+
   .header__link_inner {
     margin-left: 4px;
   }
+
   .header__link_span {
     display: inline-block;
     vertical-align: baseline;
     margin-bottom: 3px;
   }
+
   .header__menu {
     .header__bottom {
       display: block;
@@ -344,6 +339,7 @@
       width: 100%;
       font-size: 15px;
     }
+
     .header__top {
       border-bottom: 1px solid #ececec;
       height: 88px;
@@ -359,6 +355,7 @@
     width: 53%;
     padding-left: 34px;
   }
+
   .header__delivery {
     position: relative;
     left: 5px;
