--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -14,7 +14,7 @@
 
 .footer__social {
   margin: 0 auto;
-  width: 165px;
+  width: 142px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,8 +75,9 @@
 }
 
 .footer__html_icon {
-  width: 27px;
-  height: 34px;
+  margin-left: 20px;
+  width: 40px;
+  height: auto;
   fill: #63d1bb;
 }
 
