--- a/css/contacts.css
+++ b/css/contacts.css
@@ -155,6 +155,7 @@
     margin: 0;
     margin-left: 25px; }
   .contacts__img_wrap {
+    position: relative;
     margin-top: -423px;
     margin-left: 357px;
     -webkit-transform: scale(1);
@@ -165,9 +166,21 @@
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1; }
+    .contacts__img_wrap::before {
+      position: absolute;
+      content: "";
+      background-image: url("../img/icon-map-pin.svg");
+      background-position: center center;
+      background-size: auto auto;
+      background-repeat: no-repeat;
+      top: 0;
+      left: 0;
+      width: 66px;
+      height: 100.801px; }
   .contacts__img {
     width: 525px;
-    max-height: 460px; }
+    max-height: 460px;
+    position: relative; }
   .contacts__write_us {
     margin-top: 44px;
     margin-left: 7px;
