--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
   min-height: 488px;
   background-size: 182%;
   background-repeat: no-repeat;
+  background-position: center -15px;
   background-image: url("../img/hero-mobile@1x.jpg");
   display: -webkit-box;
   display: -ms-flexbox;
@@ -22,7 +23,6 @@
 .main__title {
   position: relative;
   top: 70px;
-  left: 7px;
   font-size: 27px;
   line-height: 30px;
   width: 300px;
@@ -48,8 +48,6 @@
 .home__toy {
   background-color: #56c3b2; }
   .home__toy .home__img {
-    position: relative;
-    left: -4%;
     opacity: 0.3; }
 
 .home__link {
@@ -77,7 +75,7 @@
 
 .home__img {
   position: relative;
-  left: -6%;
+  left: -10%;
   opacity: 0.3; }
 
 @media screen and (min-width: 768px) {
@@ -88,18 +86,19 @@
     position: relative; }
   .home__wrap {
     min-height: 755px;
-    background-size: 160%;
+    background-image: url("../img/hero-tablet@1x.jpg");
+    background-size: 172%;
     background-position: 50% 0;
     width: 668px;
     margin: 0 auto;
-    position: relative; }
+    position: relative;
+    background-color: #fafafa; }
   .main__title {
     font-size: 43px;
     line-height: 50px;
     width: auto;
     margin-top: 18px;
     position: relative;
-    left: 5px;
     top: 135px; }
   .home__inner {
     display: -webkit-box;
@@ -113,11 +112,7 @@
         flex-wrap: nowrap;
     height: 130px;
     min-width: 668px;
-    width: calc(100% - 100px);
-    -ms-flex-item-align: center;
-        align-self: center;
-    position: relative;
-    left: 10px;
+    margin: 0 auto;
     z-index: 1; }
   .home__item {
     width: 50%;
@@ -134,9 +129,6 @@
     height: 100%;
     width: 100%;
     margin: 0 auto;
-    -webkit-box-pack: initial;
-        -ms-flex-pack: initial;
-            justify-content: initial;
     padding: 0 11.97604790419162%; }
     .home__link:hover .home__text {
       -webkit-transform: translateY(-5px);
@@ -147,12 +139,13 @@
   .home__text {
     position: relative;
     top: -5px;
+    left: -5px;
     font-size: 20px;
     line-height: 30px;
     -webkit-transition: 0.7s;
     transition: 0.7s; }
   .home__img {
-    margin-left: 31%;
+    margin-left: 51%;
     -webkit-transition: 0.7s;
     transition: 0.7s; }
   .home__separator {
