--- a/css/page__header.css
+++ b/css/page__header.css
@@ -26,7 +26,11 @@
 .main_nav {
   width: 100%;
   background-color: #ffffff;
-  position: relative; }
+  position: relative;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 24px;
+  z-index: 10; }
 
 .header__menu {
   display: none;
@@ -61,13 +65,7 @@
   top: -11px;
   width: 20px;
   height: 30px;
-  background-color: #fff; }
-
-.main_nav {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 24px;
-  z-index: 10; }
+  background-color: #ffffff; }
 
 .header__site_menu,
 .header__user_menu {
@@ -111,7 +109,8 @@
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: 0; }
+    margin: 0;
+    background-color: transparent; }
   .header__logo_img {
     margin-top: 25px; }
   .header__menu {
@@ -147,7 +146,8 @@
             justify-content: space-between;
     margin-left: 50px;
     width: 49%;
-    font-size: 15px; }
+    font-size: 15px;
+    background-color: transparent; }
   .header__user_menu {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -158,7 +158,8 @@
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-left: auto;
-    width: 51.69270833333333%; }
+    width: 51.69270833333333%;
+    background-color: transparent; }
   .header__user_menu .header__link {
     border-left: 1px solid #ececec;
     height: 88px; }
@@ -174,7 +175,10 @@
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
-            justify-content: center; }
+            justify-content: center;
+    background-color: transparent; }
+  .header__item {
+    background-color: transparent; }
   .header__item_search {
     width: 84px; }
   .header__item_cart {
@@ -198,7 +202,8 @@
     margin-left: 84px;
     padding-left: 8%;
     width: 100%;
-    text-align: left; } }
+    text-align: left;
+    background-color: transparent; } }
 
 @media screen and (min-width: 1250px) {
   .header__wrap {
