--- a/css/preview.css
+++ b/css/preview.css
@@ -17,6 +17,7 @@
 .preview__title {
   position: relative;
   top: -8px;
+  left: -5px;
   font-size: 25px;
   line-height: 30px;
   font-weight: bold; }
@@ -25,6 +26,7 @@
   margin-bottom: 15px; }
 
 .preview__specs {
+  position: relative;
   margin-top: 15px;
   font-size: 15px;
   line-height: 24px;
@@ -39,7 +41,8 @@
   min-height: 205px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  left: -5px; }
 
 .preview__spec {
   padding-bottom: 6px;
