--- a/sass/page__header.scss
+++ b/sass/page__header.scss
@@ -30,6 +30,10 @@
   width: 100%;
   background-color: #ffffff;
   position: relative;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 24px;
+  z-index: 10;
 }
 
 .header__menu {
@@ -69,7 +73,6 @@
 
   &:checked + .header__label ~ .header__menu {
     display: block;
-
   }
 }
 
@@ -79,14 +82,7 @@
   top: -11px;
   width: 20px;
   height: 30px;
-  background-color: #fff;
-}
-
-.main_nav {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 24px;
-  z-index: 10;
+  background-color: #ffffff;
 }
 
 .header__site_menu,
@@ -100,6 +96,7 @@
   border-bottom: 1px solid #ececec;
   text-decoration: none;
   color: #000000;
+
   &:hover {
     color: rgba(0, 0, 0, 0.6);
   }
@@ -143,10 +140,13 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0;
+    background-color: transparent;
   }
+
   .header__logo_img {
     margin-top: 25px;
   }
+
   .header__menu {
     display: flex;
     position: static;
@@ -161,12 +161,15 @@
     height: 88px;
     width: 48.30729166666667%;
   }
+
   .header__link_inner {
     margin-left: -2px;
   }
+
   .header__link_span {
     margin-left: 25px;
   }
+
   .header__site_menu {
     position: relative;
     top: -24px;
@@ -176,6 +179,7 @@
     margin-left: 50px;
     width: 49%;
     font-size: 15px;
+    background-color: transparent;
   }
 
   .header__user_menu {
@@ -184,6 +188,7 @@
     flex-wrap: wrap;
     margin-left: auto;
     width: 51.69270833333333%;
+    background-color: transparent;
   }
 
   .header__user_menu .header__link {
@@ -200,6 +205,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: transparent;
+  }
+
+  .header__item {
+    background-color: transparent;
   }
 
   .header__item_search {
@@ -220,8 +230,6 @@
     justify-content: flex-start;
   }
 
-
-
   .header__bottom {
     display: none;
   }
@@ -236,6 +244,7 @@
     padding-left: 8%;
     width: 100%;
     text-align: left;
+    background-color: transparent;
   }
 }
 
@@ -269,10 +278,12 @@
       border-right: 1px solid #ececec;
       padding-left: 50px;
     }
+
     .header__item_order {
       padding-left: 35px;
       width: 53%;
     }
+
     .header__link {
       height: 88px;
       justify-content: flex-start;
@@ -287,14 +298,17 @@
       border-bottom: 0;
     }
   }
+
   .header__link_inner {
     margin-left: 4px;
   }
+
   .header__link_span {
     display: inline-block;
     vertical-align: baseline;
     margin-bottom: 3px;
   }
+
   .header__menu {
     .header__bottom {
       display: block;
@@ -304,6 +318,7 @@
       width: 100%;
       font-size: 15px;
     }
+
     .header__top {
       border-bottom: 1px solid #ececec;
       height: 88px;
